--- a/index.html
+++ b/index.html
@@ -11,12 +11,279 @@
 </head>
 
 <body>
-    <h1 class="text-3xl font-bold underline p-2 hover:line-through text-center ">
-        Hello world!
-    </h1>
-    <h2 class="var text-cyan-500  ">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat odio, eum quaerat, iste ullam
-        voluptatum minus aperiam fugiat quas esse ut illo. Quod, sed incidunt deserunt eligendi architecto repellendus
-        accusamus?</h2>
+
+    <!-- --------------- header-------------------- -->
+    <header class="bg-white h-[84px]  fixed top-0 z-50 left-0 right-0 ">
+        <div class="head container mx-auto flex justify-between items-center py-[17px]">
+            <a href="/">
+                <img src="./images/logo.svg" alt="logo">
+            </a>
+            <nav>
+                <ul class="p-0 flex justify-between gap-6">
+                    <li><a href="#" class="text-[#303948] text-base">About</a></li>
+                    <li><a href="#" class="text-[#303948] text-base">Services</a></li>
+                    <li><a href="#" class="text-[#303948] text-base">Client</a></li>
+                    <li><a href="#" class="text-[#303948] text-base">Blog</a></li>
+                    <li><a href="#" class="text-[#303948] text-base">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- --------------- main-------------------- -->
+    <main>
+        <section>
+            <div
+                class="hero container mx-auto mt-[171px] bg-[url('./images/bg-hero.png')] bg-no-repeat bg-cover py-[216px] px-[76px]   rounded-[35px] relative z-10">
+                <div class="hero__left">
+                    <h1 class="hero__title text-white text-[50px] leading-[71px] font-bold">Go digital with us</h1>
+                    <p class="hero__text mt-2 font-normal text-white text-base w-[471px]">We have designed hundreds of
+                        websites and helped improve their online
+                        performance through SEO, SEM and Social Media Marketing</p>
+                    <button
+                        class="hero__btn text-[#303948] text-[22px] leading-[31px] font-medium py-[18px] px-[53px] bg-white rounded-[35px] mt-[30px]">See
+                        Portofolio</button>
+                </div>
+                <div class="hero__img absolute top-[-28px] right-0 z-0 rounded-[35px]">
+                    <img src="./images/boy.png " class="z-0 rounded-[35px]" alt="boy img">
+                </div>
+            </div>
+        </section>
+
+        <!-- 2nd part -->
+
+        <section>
+            <div
+                class="our container mx-auto w-[1039px] rounded-[35px] bg-indigo-800 py-[97px] px-[47px] relative z-40 translate-y-[-100px]">
+                <h3 class="our__title text-white leading-[51px] text-[36px] font-medium">We are experienced</h3>
+                <p
+                    class="our__text text-white leading-[26px] text-[18px] font-normal mt-[29px] after:content-[url('./images/Arrow.svg')] after:absolute after:right-[47px] after:bottom-10">
+                    We have been around for a long time since 2010, thousands of products have been
+                    created, we are always here to provide new innovations for you</p>
+            </div>
+        </section>
+
+        <!-- 3rd part -->
+
+        <section>
+            <div class="client container mx-auto  mt-[84px]">
+                <h2 class="client__title text-center text-[#303948] text-[36px] font-medium leading-[51px]">Client</h2>
+                <p class="client__text text-center text-[#303948] text-[18px] font-normal leading-[26px] mt-[25px]">
+                    Using Our Experience To Make Your Digital Experience Brighter</p>
+                <div class="cleint__us flex justify-center gap-[27px] items-end mt-[56px]">
+                    <img src="./images/microsoft.png" alt="microsoft logo">
+                    <img src="./images/google.png" alt="google logo">
+                    <img src="./images/amazon.png" alt="amazonlogo">
+                </div>
+            </div>
+        </section>
+
+        <!-- 4th part -->
+
+        <section>
+            <div class="help container mx-auto mt-[50px]">
+                <div class="help__wrapper flex items-center justify-between gap-[46px]">
+                    <div class="help__left">
+                        <img src="./images/spec.png" alt="spec img">
+                    </div>
+                    <div class="help__right">
+                        <span class="help__sp text-[#303948] text-[18px] font-normal leading-[26px]">Who We Help</span>
+                        <h3
+                            class="help__title text-[#14213D] text-[36px] font-medium leading-[51px] w-[550px] mt-[14px]">
+                            Specific challenges require specific solutions</h3>
+                        <p class="help__text text-[#59616D] text-[18px] font-normal leading-[26px] w-[487px] mt-[14px]">
+                            Some of the industries our digital agency specialises in</p>
+                        <div class="card__wrapper flex flex-wrap gap-[86px] w-[615px] mt-[82px]">
+                            <div class="help__card card">
+                                <div class="card__inner  flex gap-[23px] items-center">
+                                    <img src="./images/web.png" alt="web icon">
+                                    <h4 class="card__title text-[#303948] text-[16px] font-medium leading-[23px]">Web &
+                                        Mobile Apps</h4>
+                                </div>
+                                <p
+                                    class="card__text text-[#59616D] text-[18px] font-normal leading-[26px] w-[220px] mt-[26px]">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                            <div class="help__card card">
+                                <div class="card__inner flex gap-[23px] items-center">
+                                    <img src="./images/Dashboard.svg" alt="">
+                                    <h4 class="card__title text-[#303948] text-[16px] font-medium leading-[23px]">Web &
+                                        Mobile Apps</h4>
+                                </div>
+                                <p
+                                    class="card__text text-[#59616D] text-[18px] font-normal leading-[26px] w-[220px] mt-[26px]">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                            <div class="help__card card">
+                                <div class="card__inner flex gap-[23px] items-center">
+                                    <img src="./images/seo.svg" alt="">
+                                    <h4 class="card__title text-[#303948] text-[16px] font-medium leading-[23px]">Web &
+                                        Mobile Apps</h4>
+                                </div>
+                                <p
+                                    class="card__text text-[#59616D] text-[18px] font-normal leading-[26px] w-[220px] mt-[26px]">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                            <div class="help__card card">
+                                <div class="card__inner flex gap-[23px] items-center">
+                                    <img src="./images/security.svg" alt="">
+                                    <h4 class="card__title text-[#303948] text-[16px] font-medium leading-[23px]">Web &
+                                        Mobile Apps</h4>
+                                </div>
+                                <p
+                                    class="card__text text-[#59616D] text-[18px] font-normal leading-[26px] w-[220px] mt-[26px]">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 5th part -->
+
+        <section>
+            <div class="work container mx-auto flex items-center justify-between mt-[177px]">
+                <div class="work__left">
+                    <h2 class="work__title text-[#303948] text-[36px] font-medium leading-[51px]">How does our process
+                        work?</h2>
+                    <p class="work__text text-[#59616D] text-[18px] font-normal leading-[26px] w-[485px] mt-[52px]">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <button
+                        class="work__btn text-[#FAFAFA] text-[22px] font-normal leading-[31px] mt-[60px] rounded-[35px] bg-[#14213D] py-[18px] px-[70px]">
+                        See Details</button>
+                </div>
+                <div class="work__right">
+                    <img src="./images/work.png" alt="work img">
+                </div>
+            </div>
+        </section>
+
+        <!-- 6th part -->
+
+        <section>
+            <div class="our container mx-auto mt-[136px]">
+                <div class="our__top flex justify-between items-center">
+                    <div class="our__top-wrapper">
+                        <span class="our__sp text-[#303948] text-[18px] font-normal leading-[26px] ">Our Product</span>
+                        <h3 class="our__title text-[#14213D] text-[36px] font-medium leading-[51px] mt-[14px]">We’ll let our work speak for itself</h3>
+                        <p class="our__text text-[#59616D] text-[18px] font-normal leading-[26px] mt-[14px]">Ut enim ad minim veniam, quis nostrud exercitation ullamco </p>
+                    </div>
+                    <div class="our__button flex gap-[40px]">
+                        <div class="btn relative">
+                            <button
+                                class="bg-[#14213D] rounded-[35px] w-[80px] h-[80px] after:content-[url('./images/Arrow-left.svg')] after:absolute after:top-[18px] after:left-0 after:right-0 "></button>
+                        </div>
+                        <div class="btn relative">
+                            <button
+                                class="bg-[#14213D] rounded-[35px] w-[80px] h-[80px] after:content-[url('./images/arrow-r.svg')] after:absolute after:top-[18px] after:left-0 after:right-0 "></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="our__bottom mt-[94px] flex justify-around gap-[107px]">
+                    <div class="our__card card flex flex-col items-center">
+                        <img src="./images/Rectangle1.png" alt="Rectangle1 img">
+                        <h3 class="card__title text-[#14213D] text-[36px] font-medium leading-[51px] mt-[36px] ">PT. ABCDE</h3>
+                        <p class="card__text text-[#59616D] text-[18px] font-normal leading-[26px] mt-[14px]">Web Development</p>
+                        <button class="card__btn bg-[#14213D] rounded-[35px] py-[18px] px-[70px] text-[#FAFAFA] text-[22px] font-medium leading-[31px] mt-[36px]">See Details</button>
+                    </div>
+                    <div class="our__card card flex flex-col items-center">
+                        <img src="./images/Rectangle2.png" alt="Rectangle1 img">
+                        <h3 class="card__title text-[#14213D] text-[36px] font-medium leading-[51px] mt-[36px] ">Rose Wood</h3>
+                        <p class="card__text text-[#59616D] text-[18px] font-normal leading-[26px] mt-[14px]">SEO</p>
+                        <button class="card__btn bg-[#14213D] rounded-[35px] py-[18px] px-[70px] text-[#FAFAFA] text-[22px] font-medium leading-[31px] mt-[36px]">See Details</button>
+                    </div>
+                    <div class="our__card card flex flex-col items-center">
+                        <img src="./images/Rectangle3.png" alt="Rectangle1 img">
+                        <h3 class="card__title text-[#14213D] text-[36px] font-medium leading-[51px] mt-[36px] ">CoSpace</h3>
+                        <p class="card__text text-[#59616D] text-[18px] font-normal leading-[26px] mt-[14px]">Presentation Template</p>
+                        <button class="card__btn bg-[#14213D] rounded-[35px] py-[18px] px-[70px] text-[#FAFAFA] text-[22px] font-medium leading-[31px] mt-[36px]">See Details</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 7th part -->
+
+        <section>
+            <div class="them container mx-auto flex gap-[50px] justify-between mt-[165px]">
+                <div class="them__left">
+                    <img src="./images/them.png" class=" w-[492px] h-[684px]" alt="them img">
+                </div>
+
+                <div class="them__right">
+                    <h3 class="them__title text-[#14213D] text-[36px] font-medium leading-[51px] mt-[199px]">
+                        Testimonials by them</h3>
+                    <p class="them__text text-[#59616D] text-[24px] font-normal leading-[34px] mt-[22px] w-[627px]">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. <span
+                            class="text-[#14213D] font-bold ">-Joe Z</span> </p>
+
+                    <div class="them__button flex gap-[40px] justify-end mt-[136px]">
+                        <div class="btn relative">
+                            <button
+                                class="bg-[#14213D] rounded-[35px] w-[80px] h-[80px] after:content-[url('./images/Arrow-left.svg')] after:absolute after:top-[18px] after:left-0 after:right-0 "></button>
+                        </div>
+                        <div class="btn relative">
+                            <button
+                                class="bg-[#14213D] rounded-[35px] w-[80px] h-[80px] after:content-[url('./images/arrow-r.svg')] after:absolute after:top-[18px] after:left-0 after:right-0 "></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- --------------- footer-------------------- -->
+    <footer>
+        <div
+            class="footer container mx-auto mt-[118px] bg-[url('./images/footer-bg.png')] bg-no-repeat bg-cover rounded-[35px] pt-[69px] pl-[22px] pr-[155px] pb-[31px] relative">
+            <div class="footer__top flex justify-between items-start ">
+                <div class="footer__left">
+                    <a href="/">
+                        <img src="./images/f-logo.svg" alt="footer logo">
+                    </a>
+                    <p class="footer__text mt-[48px] ">
+                        Go digital with us
+                        <br>
+                        <br>
+                        50 Raya Building
+                        <br>
+                        Call us: 123-456-678
+                    </p>
+                </div>
+                <div class="footer__righ flex  gap-[64px]">
+                    <div class="footer__inner">
+                        <h4 class="footer__title text-[#14213D] text-[20px] font-bold leading-[28px]">Company</h4>
+                        <ul class="flex flex-col  gap-[20px] mt-[11px]">
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Gallery</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__inner">
+                        <h4 class="footer__title text-[#14213D] text-[20px] font-bold leading-[28px]">Social Media</h4>
+                        <ul class="flex flex-col  gap-[20px] mt-[11px]">
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Instagram</a></li>
+                            <li><a href="#">Twitter</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer__bottom mt-[126px]">
+                <p class="footer__copy text-[#14213D] text-[18px] font-normal leading-[26px]">Copyright © 2021
+                    Steelthemes. All Rights Reserved.</p>
+            </div>
+
+            <div class="footer__img absolute top-[35px] right-0">
+                <img src="./images/f-r.png" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
